Fixed alignment problem

--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,7 @@ a {
 
 #home-app-hero-right-area {
     text-align: right;
+    margin-left: auto;
 }
 
 #home-app-hero-img {
